# 6502-Emulator

./: .gitignore  CMakeLists.txt  cmake_install.cmake  emulator.cpp  emulator.h  log.cpp  main.cpp  mainwindow.cpp  mainwindow.h  memorymappeddevice.h  memorymodel.cpp  memorymodel.h  mos6502.cpp  resources.qrc  rom.cpp  vram.cpp
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
config/: syntax_highlight.ini
resources/img/: icon.xpm
resources/windows/: icon.rc
src/: emulator.cpp  emulator.h  loadedfile.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  memorymappeddevice.h  memorymodel.cpp  memorymodel.h  mos6502.h  programram.cpp  programram.h  resources.qrc  rom.cpp  rom.h  syntaxhighlighter.cpp  syntaxhighlighter.h  vram.h
